Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102750

Some highlighted examples are crashing at startup on embedded devices

XMLWordPrintable

    • 8161726619 (qt/qtbase/dev) 8161726619 (qt/tqtc-qtbase/dev)

      Examples chartthemes, localfortuneclient/server, camera, player, http, imagescaling and application examples are crashing at startup on embedded devices with 6.4.0 snapshot (SHA: 70c0deb41:73927c6db (meta-boot2qt:meta-qt6). gdb stacktrace says:

      Starting program: /opt/chartthemes/bin/chartthemes 
      [Thread debugging using libthread_db enabled]
      Using host libthread_db library "/lib/libthread_db.so.1".
      QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to '/tmp/runtime-root'
      QEglFSVivIntegration will set environment variable FB_MULTI_BUFFER=2 to enable double buffering and vsync.
       If this is not desired, you can override this via: export QT_EGLFS_IMX6_NO_FB_MULTI_BUFFER=1
      [New Thread 0x69c4d280 (LWP 628)]
      [New Thread 0x692ff280 (LWP 629)]Thread 1 "chartthemes" received signal SIGSEGV, Segmentation fault.
      0x76697768 in QRhi::newTexture(QRhiTexture::Format, QSize const&, int, QFlags<QRhiTexture::Flag>) () from /usr/lib/libQt6Gui.so.6
      (gdb) bt
      #0  0x76697768 in QRhi::newTexture(QRhiTexture::Format, QSize const&, int, QFlags<QRhiTexture::Flag>) () from /usr/lib/libQt6Gui.so.6
      #1  0x75ca50f2 in QOpenGLCompositorBackingStore::updateTexture() () from /usr/lib/libQt6OpenGL.so.6
      #2  0x75ca53aa in QOpenGLCompositorBackingStore::flush(QWindow*, QRegion const&, QPoint const&) () from /usr/lib/libQt6OpenGL.so.6
      #3  0x7656285a in QBackingStore::flush(QRegion const&, QWindow*, QPoint const&) () from /usr/lib/libQt6Gui.so.6
      #4  0x76e5f4f8 in ?? () from /usr/lib/libQt6Widgets.so.6 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes